finished AUTH module for baclend
