# backend/src/main/kotlin/com/wedify/api/dto/auth/ResetPasswordRequest.kt
@@ -1,0 +1,9 @@
+package com.wedify.api.dto.auth
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class ForgotPasswordRequest(
+    val email: String,
+    val redirectUrl: String?
+)
